[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibb"
version = "0.0.1"
description = "Big Brother Simulator for LLMs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["openrouter", "pyyaml", "python-dotenv", "pydantic"]

[project.optional-dependencies]
aicf = []
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aibb*", "freeform*", "loose*", "rigid*"]
exclude = ["test*"]
